# rediff

./: README.md  app.py  app.tcss  db.py  dev-requirements.txt  filediffview.py  pyproject.toml  rediff.py  requirements.txt
.github/workflows/: lint.yml  python-test.yml
src/rediff/: app.tcss  cli.py  db.py  filediffview.py
tests/: test_db.py
