[tool.poetry]
name = "rediff"
version = "0.1.0"
description = "Rebase Diff Viewer and Editor"
authors = ["Dave Harrington <harrington.dave@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
textual = "^0.42.0"
GitPython = "^3.1.40"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rediff = "rediff.cli:app"
